--- a/css/style.css
+++ b/css/style.css
@@ -9,5 +9,31 @@ body {
 
 .ingr, .dire {
     background-color: rgba(56, 119, 56, 0.822);
-    width:450px;
+    width:350px;
+    padding: 30px;
+    border:10px solid rgb(245, 147, 68);
+    margin-left: 25px;
+    margin-top: 60px;
+} 
+nav > ul {
+    background-color: green;
+    text-align: center;
+}
+nav > ul > li {
+    
+    list-style-type: none;
+    display:inline-block;
+    margin: 10px;
+    font-size: 30px;
+    padding: 5px;
+}
+        
+nav > ul > li a {
+    color: rgba(243, 226, 77, 0.863);
+    text-decoration: none;
+}
+nav > ul > li a:hover, li a:focus {
+    text-decoration: underline;
+
+
 }
